fix: alignment

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ h1 {
 }
 
 .card {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     padding: 2rem;
     margin: 2rem;
-    text-align: center;
     border: 1px solid black;
     border-radius: 1rem;
     width: 250px;
